src/test/deca/demo/error/lexer_error.deca
// Programme dans lequel on initialise une variable à la fin
{
    // Déclaration d'un premier entier
    int var1 = 1;

    // On incrémente cet entier de 1
    var1 = var1 + 1;

    // On essaie de déclarer un deuxième entier
    int var2 = 2;
}
